
Emulator:
- Host mouse is centered to Hatari window on Falcon resolution changes
  (helps in synchronizing host and emulated mouse positions)
- Option for preventing GEMDOS HDD emulation file modifications
  ("--mount-changes no")
- AVI file recording:
  - video can be stored as BMP or as PNG images
  - audio is stored as 16 bits stereo PCM.
- Statusbar shows CPU type & speed
- Debugger improvements:
  - "trace" command for tracing what the emulated code does
  - GEMDOS tracing gives slightly more information
  - "evaluate" command for doing calculations
  - "info" command for showing Atari HW and OS information
  - "symbols" command for loading and listing CPU & DSP code
    symbols/addresses and breaking on them.  Symbols are shown
    on CPU disassembly
  - debugger command and command argument TAB-completion support
    (requires readline library)
  - improved register name handling + fixed DSP reg name matching
  - CPU breakpoints can be given an optional count of how many hits
    there needs to be before they break into debugger.  If count
    of one is given, breakpoint is removed after hit
  - Display DSP instructions cycle timings in disasm mode (in cycles)

Other changes:
- Preliminary CMake build support


 Version 1.3.1 (2009-09-05):
 ---------------------------

This is only a bug fix release:
- GEMDOS HD emulation works together with ACSI HD image again
- Fix incorrect use of DESTDIR in python-ui installation
- Fix memdump/disasm in python-ui


 Version 1.3.0 (2009-08-16):
 ---------------------------

Emulation:
- Hugely improved DSP emulation:
  - Many more DSP using games/demos/apps work now
  - Preliminary sound support (e.g. most DSP based .MOD-playback works)
  - Better cycle counting / accuracy
  - Many speed improvements
- Major rewrite of the internal work/structures of video.c :
  - Allow to mix 50/60 Hz lines of 508/512 cycles and to keep correct
    video/cpu sync (fixes TCB in SNY, DI in MindBomb, TEX in Syntax Terror).