@@ -20,10 +20,12 @@ const char DlgNewDisk_fileid[] = "Hatari dlgNewDisk.c : " __DATE__ " " __TIME__;
 #define DLGNEWDISK_SECTORS9   7
 #define DLGNEWDISK_SECTORS10  8
 #define DLGNEWDISK_SECTORS11  9
-#define DLGNEWDISK_SIDES1     11
-#define DLGNEWDISK_SIDES2     12
-#define DLGNEWDISK_SAVE       13
-#define DLGNEWDISK_EXIT       14
+#define DLGNEWDISK_SECTORS18  10
+#define DLGNEWDISK_SECTORS36  11
+#define DLGNEWDISK_SIDES1     13
+#define DLGNEWDISK_SIDES2     14
+#define DLGNEWDISK_SAVE       15
+#define DLGNEWDISK_EXIT       16
 
 static char szTracks[3];
 static int nTracks = 80;
@@ -31,21 +33,23 @@ static int nTracks = 80;
 /* The new disk image dialog: */
 static SGOBJ newdiskdlg[] =
 {
-	{ SGBOX, 0, 0, 0,0, 28,12, NULL },
+	{ SGBOX, 0, 0, 0,0, 29,14, NULL },
 	{ SGTEXT, 0, 0, 6,1, 16,1, "New floppy image" },
 	{ SGTEXT, 0, 0, 2,3, 7,1, "Tracks:" },
 	{ SGBUTTON, 0, 0, 12,3, 1,1, "\x04" },   /* Left-arrow button  */
 	{ SGTEXT, 0, 0, 14,3, 2,1, szTracks },
 	{ SGBUTTON, 0, 0, 17,3, 1,1, "\x03" },   /* Right-arrow button */
 	{ SGTEXT, 0, 0, 2,5, 8,1, "Sectors:" },
-	{ SGRADIOBUT, 0, SG_SELECTED, 12,5, 4,1, "9" },
+	{ SGRADIOBUT, 0, SG_SELECTED, 12,5, 4,1, " 9" },
 	{ SGRADIOBUT, 0, 0, 17,5, 4,1, "10" },
 	{ SGRADIOBUT, 0, 0, 22,5, 4,1, "11" },
-	{ SGTEXT, 0, 0, 2,7, 6,1, "Sides:" },
-	{ SGRADIOBUT, 0, 0, 12,7, 4,1, "1" },
-	{ SGRADIOBUT, 0, SG_SELECTED, 17,7, 4,1, "2" },
-	{ SGBUTTON, 0, 0, 4,10, 8,1, "Create" },
-	{ SGBUTTON, 0, 0, 18,10, 6,1, "Back" },
+	{ SGRADIOBUT, 0, 0, 12,6, 9,1, "18 (HD)" },
+	{ SGRADIOBUT, 0, 0, 12,7, 9,1, "36 (ED)" },
+	{ SGTEXT, 0, 0, 2,9, 6,1, "Sides:" },
+	{ SGRADIOBUT, 0, 0, 12,9, 4,1, "1" },
+	{ SGRADIOBUT, 0, SG_SELECTED, 17,9, 4,1, "2" },
+	{ SGBUTTON, 0, 0, 4,12, 8,1, "Create" },
+	{ SGBUTTON, 0, 0, 18,12, 6,1, "Back" },
 	{ -1, 0, 0, 0,0, 0,0, NULL }
 };
 
@@ -94,7 +98,11 @@ void DlgNewDisk_Main(void)
 					int nSectors, nSides;
 
 					/* Get number of sectors */
-					if (newdiskdlg[DLGNEWDISK_SECTORS11].state & SG_SELECTED)
+					if (newdiskdlg[DLGNEWDISK_SECTORS36].state & SG_SELECTED)
+						nSectors = 36;
+					else if (newdiskdlg[DLGNEWDISK_SECTORS18].state & SG_SELECTED)
+						nSectors = 18;
+					else if (newdiskdlg[DLGNEWDISK_SECTORS11].state & SG_SELECTED)
 						nSectors = 11;
 					else if (newdiskdlg[DLGNEWDISK_SECTORS10].state & SG_SELECTED)
 						nSectors = 10;
