@@ -32,6 +32,8 @@ Emulator:
   - video can be stored as BMP or as PNG images
   - audio is stored as 16 bits stereo PCM.
 - Statusbar shows CPU type & speed
+- Can create blank 2.88MB (ED) and 1.44MB (HD) floppy images
+  from the GUI in addition to DD & SD images
 - Debugger improvements:
   - "trace" command for tracing what the emulated code does
   - GEMDOS tracing gives slightly more information
